# mysql_distillery

./: .env.example  APPENDIX.md  LICENSE  README.md  pyproject.toml
.ai/: AGENTS.md  CLAUDE.md
.github/workflows/: publish.yml
scripts/: release.sh
src/: main.py
src/mysql_distillery/: __init__.py  extract.py
src/mysql_distillery/components/: __init__.py  constraints.py  data.py  data_quality.py  events.py  metadata.py  nullable_zerodates.py  routines.py  schema.py  triggers.py  views.py
src/mysql_distillery/data/: __init__.py
src/mysql_distillery/data/dtos/: __init__.py  component_result.py
src/mysql_distillery/data/enums/: __init__.py  component_status.py
src/mysql_distillery/data/models/: __init__.py  server_connection_config.py
src/mysql_distillery/data/utils/: __init__.py  cli.py  ddl.py  duckdb.py  files.py  logging.py  mysql.py  safety.py
tests/: smoke_test.py  test_common.py  test_data_quality.py  test_ddl_definer_strip.py  test_metadata_row_counts.py  test_schema_foreign_key_strip.py
